# Directory_Explorer

./: README.md  crawler.cpp  crawler.h  main.cpp  makefile  meson.build
subprojects/: .gitignore
tests/: crawler_tests.cpp
tests/files/: lorem_ipsum_28.txt
tests/files/wide_dir_100/7/7/: lorem_ipsum_10.txt
